# Backend

./: CHANGELOG.md  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py  database.py  security.py
app/models/: schemas.py
app/services/: face_recognition.py  faiss_service.py  photo_service.py  swipe_service.py  user_service.py
app/utils/: search.py
